--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "healthcare-prediction-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:9091",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "check-server": "node ../checkAndStartServer.js",
+    "dev": "npm run check-server && npm start"
   },
   "eslintConfig": {
     "extends": [
