--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-PORT=3001
-REACT_APP_API_URL=http://localhost:8080/api/v1
+PORT=3000
+REACT_APP_API_URL=http://localhost:9091
+REACT_APP_API_VERSION=
 REACT_APP_SOCKET_URL=http://localhost:8080
 REACT_APP_ENV=development
