--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "health-prediction-system",
   "version": "1.0.0",
-  "description": "Health prediction system for university project",
+  "description": "Health Prediction System",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "node scripts/start.js",
     "server": "nodemon backend/server.js",
     "mock-server": "nodemon backend/config/mockBackend.js",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
     "mock-dev": "concurrently \"npm run mock-server\" \"npm run client\"",
     "start-frontend": "cd frontend && npm start",
-    "start-backend": "cd backend && node server.js",
+    "start:backend": "cd backend && npm start",
     "install-all": "npm install && cd frontend && npm install && cd ../backend && npm install",
     "test": "npm run test:backend && npm run test:frontend",
     "test:backend": "cd backend && npm test",
@@ -28,7 +28,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^7.6.0",
+    "concurrently": "^8.2.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
