--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,13 @@
+# Server Configuration
+PORT=9090
 NODE_ENV=development
-PORT=5000
-MONGO_URI=mongodb://localhost:27017/health-presentation
-JWT_SECRET=your-secret-key-for-university-presentation
+
+# MongoDB Configuration
+# Local MongoDB
+MONGO_URI=mongodb://localhost:27017/health-prediction-dev
+
+# JWT Secret
+JWT_SECRET=your_jwt_secret_key_change_this_in_production
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
@@ -22,5 +28,5 @@ TWILIO_PHONE_NUMBER=your_twilio_phone_number
 ML_API_URL=http://localhost:8000
 ML_API_KEY=your_ml_service_api_key
 
-# Frontend URL (for links in emails/notifications)
+# Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
