--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,25 @@
+# Server Configuration
+PORT=9090
 NODE_ENV=development
-PORT=5000
 
-# Database
+# MongoDB Configuration
+# Local MongoDB
 MONGO_URI=mongodb://localhost:27017/health-prediction-dev
 
-# JWT
-JWT_SECRET=your-secret-key-here
+# MongoDB Atlas (uncomment and replace with your connection string)
+# MONGO_URI=mongodb+srv://<username>:<password>@<cluster>.mongodb.net/health-prediction?retryWrites=true&w=majority
+
+# JWT Secret
+JWT_SECRET=your_jwt_secret_key_change_this_in_production
 JWT_EXPIRE=30d
 JWT_COOKIE_EXPIRE=30
 
-# Email
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=2525
-EMAIL_USERNAME=your-mailtrap-username
-EMAIL_PASSWORD=your-mailtrap-password
-EMAIL_FROM=noreply@healthprediction.rw
+# Email Configuration
+EMAIL_HOST=smtp.example.com
+EMAIL_PORT=587
+EMAIL_USER=user@example.com
+EMAIL_PASSWORD=yourpassword
+EMAIL_FROM=noreply@healthprediction.com
 
 # ML Service API
 ML_API_URL=http://localhost:8000
